fixed last chart having too much padding

--- a/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
+++ b/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
@@ -33,5 +33,5 @@
 }
 
 .last-param {
-  margin-bottom: -16px;
+  margin-bottom: -18px;
 }
